# ANARI-PTC

./: .gitmodules  CMakeLists.txt  README.md
.github/scripts/actions/: install_cuda_ubuntu.sh
.github/workflows/: Ubuntu.yml
cpu_compositing/: CMakeLists.txt  CPUCompositor.cpp  CPUCompositor.h
ptc/: CMakeLists.txt  CPUFrameWrapper.cpp  CPUFrameWrapper.h  CUDAFrameWrapper.cu  CUDAFrameWrapper.h  FrameWrapper.cpp  FrameWrapper.h  PTCDevice.cpp  PTCDevice.h
